tests/ui/delegation/hir-crate-items-before-lowering-ices.ice_155128.stderr
error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/hir-crate-items-before-lowering-ices.rs:37:11
   |
LL |       reuse a as b {
   |  ___________^______-
LL | |         fn foo<T>() {};
LL | |         foo
LL | |     }
   | |_____- unexpected argument of type `fn() {foo::<_>}`
   |
note: function defined here
  --> $DIR/hir-crate-items-before-lowering-ices.rs:35:8
   |
LL |     fn a() {}
   |        ^
help: remove the extra argument
   |
LL -     reuse a as b {
LL +     reuse {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0061`.
